# devops-ai-developer

./: .env.template  LICENSE  README.md  ai-developer-pipeline.yml  ai_agent_runner.py  check_for_tasks.py  main.py  pyproject.toml  sync-from-github.yml
agent/: azure_devops_comment_tool.py  azure_devops_pr_tool.py  developer.py  run_shell_command_tool.py
